tests/Errors/Generic/Arrays/ArrayIndent/KeyIncorrect.php
<?php

declare(strict_types=1);

$var = [
1 => 'one',
    2 => 'two',
    3 => 'three',
];

var_export($var);
